# kazan

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile_shaders.sh  debug_gfx.sh  imgui.ini  kzn_frame4226.rdc  kzn_roadmap.md  main.old.cpp  mkmod  notes.md  todo.md  xmake.lua
assets/shaders/: debug.frag  debug.vert  debug.vert.spv  debug_triangle.slang  debug_triangle.vert  debug_triangle.vert.spv  fullscreen.vert  geom.frag  geom.vert  pl_test.frag  pl_test.vert  skybox.frag
assets/shaders/mesh/: mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_no_light.frag  mesh_no_light.vert  mesh_no_light.vert.spv  mesh_textured.frag  mesh_textured.frag.spv  mesh_textured.vert  mesh_textured.vert.spv
assets/shaders/pbr/: pbr.frag  pbr.vert
assets/shaders/planet/: planet.frag  planet.frag.spv  planet.slang  planet.slang.spv  planet.vert  planet.vert.slang  planet.vert.spv  planet_config.glsl
assets/shaders/quad/: quad.vert  quad.vert.spv
assets/shaders/sprites/: sprite_render.frag  sprite_render.frag.spv  sprite_render.vert  sprite_render.vert.spv
assets/shaders/surface/: surface.frag.spv  surface.vert.spv
assets/shaders/surface_texture/: surface_texture.frag.spv  surface_texture.vert  surface_texture.vert.spv
assets/shaders/triangle/: triangle.vert  (+3 more)
docs/: api_design.md  code_standard.md  engine_arch.md  todo.md
examples/: README.md  editor_test.cpp  example.cpp
examples/model_render/: example4.cpp
examples/triangle/: example1.cpp  example2.cpp  example3.cpp  main.cpp  triangle.cpp
include/: camera.hpp  camera_controller.hpp  cmd_input.hpp  cmd_parser.hpp  commands.hpp  config.hpp  descriptor.hpp  device.hpp  engine.hpp  full_renderer.hpp  game_object.hpp  generator.hpp  initializers.hpp  instance.hpp  kazan.hpp  kzn_device.hpp  kzn_swap_chain.hpp  light.hpp  logger.hpp  mesh.hpp  model.hpp  multiple_render_system.hpp  pipeline.hpp  renderer.hpp  simple_render_system.hpp  swap_chain.hpp  test_app.hpp  texture.hpp  types.hpp  ui.hpp  utils.hpp  window.hpp
include/controllers/: camera_controller.hpp  ui_controller.hpp
include/core/: camera.hpp  context.hpp  cvar.hpp  input.hpp  log.hpp  model.hpp  model_renderer.hpp  offscreen_renderer.hpp  render_image.hpp  renderer.hpp  shapes.hpp  texture.hpp  transform.hpp  utils.hpp  window.hpp
include/gui/: camera_controller.hpp  console.hpp  default_pipelines.hpp  editor.hpp  editor_events.hpp  ui.hpp  ui.hpp.old
include/math/: constants.hpp  coordinates.hpp
include/utils/: string.hpp  time.hpp  variant.hpp
include/vk/: buffers.hpp  cmd_buffers.hpp  commands.hpp  descriptor_set.hpp  device.hpp  device_features.hpp  error.hpp  framebuffer.hpp  image.hpp  input_buffers.hpp  instance.hpp  pipeline.hpp  render_pass.hpp  swapchain.hpp  uniform.hpp  utils.hpp  vertex_buffer.hpp
shaders/: mesh.frag  mesh.vert  mesh.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shaders.md  surface.frag  surface.frag.spv  surface.vert  surface.vert.spv
shaders/mesh/: mesh.frag  mesh.vert.spv
shaders/surface/: surface.frag  surface.frag.spv  surface.vert  surface.vert.spv
shaders/surface_texture/: surface_texture.frag  surface_texture.frag.spv
src/: camera.cpp  camera_controller.cpp  cmd_input.cpp  cmd_parser.cpp  commands.cpp  descriptor.cpp  device.cpp  engine.cpp  full_renderer.cpp  game_object.cpp  generator.cpp  initializers.cpp  instance.cpp  kazan.hpp  kzn_device.cpp  kzn_swap_chain.cpp  light.cpp  logger.cpp  main.cpp  mesh.cpp  model.cpp  multiple_render_system.cpp  pipeline.cpp  renderer.cpp  simple_render_system.cpp  swap_chain.cpp  test_app.cpp  texture.cpp  types.cpp  ui.cpp  utils.cpp  window.cpp
src/animation/: animation_system.hpp  sprite_animator.hpp
src/controllers/: camera_controller.cpp  ui_controller.cpp
src/core/: app.hpp  assert.hpp  basic_app.hpp  camera.cpp  console.hpp  console_types.hpp  context.cpp  cvar.cpp  flat_map.hpp  input.cpp  log.cpp  log.hpp  model.cpp  model_renderer.cpp  offscreen_renderer.cpp  random.hpp  render_image.cpp  renderer.cpp  shapes.cpp  singleton.hpp  string.hpp  string_hash.hpp  texture.cpp  timing.hpp  traits.hpp  type.hpp  window.cpp  window.hpp
src/ecs/: context.hpp  entity.cpp  entity.hpp  scene.hpp  scheduler.hpp  system.hpp
src/editor/: console_panel.hpp  demo_panel.hpp  editor_app.cpp  editor_pass.cpp  editor_pass.hpp  editor_render_system.cpp  editor_render_system.hpp  editor_system.hpp  editor_test.cpp  editor_window.cpp  editor_window.hpp  main.cpp  panel.hpp  test_panel.hpp
src/events/: event.hpp  event_handlers.hpp  event_manager.hpp  events.hpp
src/game/: game_app.cpp  levels.hpp  orbit_test.hpp  player_system.hpp
src/graphics/: camera.hpp  debug_render.hpp  graphics_context.hpp  light.hpp  material3d.hpp  mesh.cpp  mesh.hpp  render_image.cpp  render_image.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  scene3d.cpp  scene3d.hpp  sprite_component.hpp  sprite_geom_cache.hpp  sprite_material.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp
src/gui/: camera_controller.cpp  console.cpp  editor.cpp  main.cpp  main.cpp.old  main.cpp.test  test.cpp  ui.cpp  ui.cpp.old
src/input/: gamepad.hpp  input.hpp  keyboard.hpp  mouse.hpp
src/math/: coordinates.hpp  transform.hpp  types.hpp
src/physics/: physics_system.hpp
src/resources/: path_aliases.hpp  resource.hpp  resources.hpp
src/test/: camera_system.hpp  main.cpp  scheduler_test.cpp
src/utils/: string.cpp  time.cpp
src/vk/: buffer.cpp  buffer.hpp  buffers.cpp  cmd_buffer.cpp  cmd_buffer.hpp  cmd_buffers.cpp  commands.cpp  cube_image.cpp  cube_image.hpp  descriptor_set.cpp  device.cpp  device.hpp  dset.cpp  dset.hpp  dset_layout.cpp  dset_layout.hpp  error.hpp  framebuffer.cpp  functions.cpp  functions.hpp  image.cpp  image.hpp  input_buffers.cpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  render_pass.cpp  render_pass.hpp  shader_code.cpp  shader_code.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  uniform.hpp  utils.cpp  utils.hpp  (+2 more)
(+40 files in other folders)
